--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ html, body {
   background-image: url(website_bg.png);
   background-size: cover;
   font-family: "Red Hat Display", sans-serif;
-  overflow: hidden;
 }
 
 img[alt="logo"] {
@@ -24,17 +23,25 @@ img[alt="logo"] {
   height: auto;
 }
 
+img[alt="image"] {
+  display: block;
+  margin: 1rem auto;
+  max-width: 300px;
+  width: 80%;
+  height: auto;
+}
+
 #cartes-container {
     position: relative;
-    width: 200px;
-    height: 300px;
+    width: 250px;
+    height: 375px;
     margin: 50px auto;
   }
 
   .carte {
     position: absolute;
-    width: 200px;
-    height: 300px;
+    width: 250px;
+    height: 375px;
     cursor: pointer;
     transform-style: preserve-3d;
     transition: transform 0.6s;
@@ -137,3 +144,36 @@ img[alt="logo"] {
   h2, li {
     margin-bottom: 0.5rem;
   }
+
+  .jouer {
+    display: block;
+    margin: 1rem auto;
+    width: fit-content;
+    text-align: center;
+    background: #FFCC00;
+    background: linear-gradient(145deg, rgb(211, 172, 14) 0%, rgba(135, 110, 8, 1) 75%);
+    color: white;
+    font-family: "Red Hat Display", sans-serif;
+    font-size: 18px;
+    font-weight: 800;
+    outline: none;
+    border: none;
+    border-radius: 100px;
+    padding: 1rem 2rem;
+    box-shadow: 0px 3px 10px #0000006c;
+  }
+
+  .description {
+    color: #ffff;
+    font-size: 40px;
+    font-weight: 900;
+    text-shadow: 0px 3px 10px #0000006c;
+    text-align: center;
+    margin: 1rem;
+  }
+
+  @media only screen and (max-width: 600px) {
+  .description {
+    font-size: 32px;
+  }
+}
